fixed content overflowing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -115,6 +115,7 @@ header {
     padding: 10px;
     border-radius: 8px;
     box-shadow: 4px 4px 4px RGBA(0, 0, 0, 0.6);
+    line-break: anywhere;
 
     p {
         font-size: 13px;
